--- a/P1.html
+++ b/P1.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="Styles.css">
   <title>Study Notes</title>
 </head>
 <body>
+<h1>Welcome to the Computer Science Study Notes</h1>
+<h2>This is the main page from here you can navigate to other pages</h2>
+<h3>Topic 1 - Data Representation</h3>
+<A href="Topic1.html">Data Representation</A>
 </body>
