--- a/Topic1.html
+++ b/Topic1.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 <h1>Topic 1.1 Number systems</h1>
-<p></p>
+<h3>Introduction</h3>
+<p>In computer science, there are two extra number systems used.</p>
+<p>These are: Binary (Base 2)
+    and Hexadecimal (Base 16)</p>
+<p>The reason we use these are stated below:
+    
+    Binary:
+    Binary consists of 1 and 0 and is used because this is the only number system a computer can only understand.
+    
+    Hexadecimal:
+    Hex consists of the characters 1,2,3,4,5,6,7,8,9,A,B,C,D,E,F and is used because it is the midpoint between denary (base 10) and Binary.
+    This means it is easy to translate from Binary to Hex and Hex to Denary.
+
 </body>
 </html>
