--- a/Topic2.html
+++ b/Topic2.html
@@ -5,3 +5,17 @@
   <link rel="stylesheet" href="Styles.css">
   <title>Topic 2</title>
 </head>
+<body>
+<h1>Topic 2 - Communications</h1>
+<h2>Definitions</h2>
+<h3>Phishing</h3>
+<p>An email with a link which will download a virus / take the user to a pharming website.</p>
+<h3>Pharming</h3>
+<p>A fake website which tries to get the user to enter their personal details.</p>
+<h3>Keylogger</h3>
+<p>Logs key presses and sends them back to the hacker.</p>
+<h3>Virus</h3>
+<p>A self replicating program that is designed to delete or damage a file</p>
+<h3>Worm</h3>
+<p>A self replicating program that is designed </p>
+</body>
